--- a/PreSgt/src/makefile
+++ b/PreSgt/src/makefile
@@ -1,49 +1,34 @@
 COBJS = sacio.o iofunc.o fft1d.o geoproj_subs.o
 FOBJS = fourg.o
 
-#GETPAR = ${HOME}/Getpar/getpar/lib
 GETPAR = ../../Getpar/getpar/lib
 
 LIBS = -lm ${GETPAR}/libget.a
-LDLIBS = ${COBJS} ${FOBJS} ${LIBS}
 
-#LF_FLAGS = -D_FILE_OFFSET_BITS=32
-#
-# use following for large file capability
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 
 UFLAGS = -O3
 
-CC = gcc
-FC = g77
+include ../../Compilers.mk
+CC = $(MY_CC)
+FC = $(MY_FC)
 
 BIN_LIST = gen_sgtgrid
 
 ##### compile options
 
-CFLAGS = ${UFLAGS} ${LF_FLAGS}
-FFLAGS = ${UFLAGS} -ffixed-line-length-132
-
-#TARG = $@
-
-##### make options
-
-#MAIN_TARG := ${MAKECMDGOALS}
-#TARG_SRC := ${MAKECMDGOALS}.c
+CFLAGS = $(UFLAGS) $(LF_FLAGS) $(MY_CFLAGS)
+FFLAGS = $(UFLAGS) $(MY_FFLAGS)
 
 all: $(BIN_LIST)
+	mkdir -p ../bin
 	for TARGET in $(BIN_LIST); do \
-		rm -f ../bin/$$TARGET ; \
-		cp $$TARGET ../bin ; \
+		rm -rf ../bin/$$TARGET ; \
+		cp $$TARGET ../bin/ ; \
 	done
 
-%: %.c ${COBJS} ${FOBJS}
-	${CC} -o $@ $@.c ${LDLIBS}
-
-#gen_sgtgrid : ${COBJS} ${FOBJS}
-#	${CC} -o $@ $@.c ${LDLIBS}
-
-${COBJS} ${FOBJS} :
+gen_sgtgrid: gen_sgtgrid.o ${COBJS} ${FOBJS}
+	${CC} -o $@ $^ ${LIBS}
 
 clean :
 	-rm -f ${COBJS} ${FOBJS} $(BIN_LIST)
