--- a/CyberCommands/.classpath
+++ b/CyberCommands/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="lib" path="xerces-2.6.2.jar"/>
 	<classpathentry kind="lib" path="xml-apis.jar"/>
 	<classpathentry kind="lib" path="commons-cli-1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
