--- a/CyberCommands/.classpath
+++ b/CyberCommands/.classpath
@@ -43,6 +43,7 @@
 	<classpathentry kind="lib" path="xml-apis.jar"/>
 	<classpathentry kind="lib" path="commons-cli-1.0.jar"/>
 	<classpathentry kind="lib" path="junit-4.1.jar"/>
+	<classpathentry kind="lib" path="fitnesse.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
