Updated makefile to support new gnu compilers

--- a/RuptureCodes/GenRandV3.2/makefile
+++ b/RuptureCodes/GenRandV3.2/makefile
@@ -1,14 +1,12 @@
 HEADS = include.h structure.h function.h defs.h
 OBJS = fourg.o iofunc.o misc.o slip.o ruptime.o srf_subs.o
 
-#GETPARLIB = ${HOME}/Getpar/getpar/lib
-GETPARLIB = /home/rcf-104/CyberShake2007/software/Getpar/getpar/lib
+GETPARLIB = ../../Getpar/getpar/lib
 
-GCCLIB = /usr/lib/gcc/x86_64-redhat-linux/4.3.2
-FORTLIBS = -lgfortranbegin -lgfortran -lgcc_s
-FC = gfortran
+#GCCLIB = /usr/lib/gcc/x86_64-redhat-linux/4.3.2
+#FORTLIBS = -lgfortranbegin -lgfortran -lgcc_s
 
-LDLIBS = ${OBJS} -L${GCCLIB} -L${GETPARLIB} -lm -lget ${FORTLIBS}
+LDLIBS = ${OBJS} -L${GETPARLIB} -lm -lget -lgfortran
 
 #LF_FLAGS = -D_FILE_OFFSET_BITS=32
 #
@@ -18,14 +16,19 @@ LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 UFLAGS = -O3
 
 CC = gcc
+FC=gfortran
+#CC=cc
+#FC=ftn
 
 CFLAGS = ${UFLAGS} ${LF_FLAGS}
 FFLAGS = ${UFLAGS} -ffixed-line-length-132
 
+all: genslip-v3.2
+
 ##### make options
 
 generf : generf.o ${OBJS}
-	g77 -o generf generf.o ${LDLIBS}
+	${FC} -o generf generf.o ${LDLIBS}
 
 fd_ruptime : fd_ruptime.c ${OBJS}
 	${CC} ${CFLAGS} -o fd_ruptime fd_ruptime.c ${LDLIBS}
@@ -43,28 +46,28 @@ genslip-v3.0 : genslip-v3.0.c ${OBJS}
 	${CC} -o genslip-v3.0 genslip-v3.0.c ${LDLIBS}
 
 genslip-v2.4 : genslip-v2.4.o ${OBJS}
-	g77 -o genslip-v2.4 genslip-v2.4.o ${LDLIBS}
+	${FC} -o genslip-v2.4 genslip-v2.4.o ${LDLIBS}
 
 genslip-v2.3 : genslip-v2.3.o ${OBJS}
-	g77 -o genslip-v2.3 genslip-v2.3.o ${LDLIBS}
+	${FC} -o genslip-v2.3 genslip-v2.3.o ${LDLIBS}
 
 genslip-v2.2 : genslip-v2.2.o ${OBJS}
-	g77 -o genslip-v2.2 genslip-v2.2.o ${LDLIBS}
+	${FC} -o genslip-v2.2 genslip-v2.2.o ${LDLIBS}
 
 genslip-v2.1 : genslip-v2.1.o ${OBJS}
-	g77 -o genslip-v2.1 genslip-v2.1.o ${LDLIBS}
+	${FC} -o genslip-v2.1 genslip-v2.1.o ${LDLIBS}
 
 genslip-v2.0 : genslip-v2.0.o ${OBJS}
-	g77 -o genslip-v2.0 genslip-v2.0.o ${LDLIBS}
+	${FC} -o genslip-v2.0 genslip-v2.0.o ${LDLIBS}
 
 genslip-mreal : genslip-mreal.o ${OBJS}
-	g77 -o genslip-mreal genslip-mreal.o ${LDLIBS}
+	${FC} -o genslip-mreal genslip-mreal.o ${LDLIBS}
 
 genslip-mreal_OLD-IO : genslip-mreal_OLD-IO.o ${OBJS}
-	g77 -o genslip-mreal_OLD-IO genslip-mreal_OLD-IO.o ${LDLIBS}
+	${FC} -o genslip-mreal_OLD-IO genslip-mreal_OLD-IO.o ${LDLIBS}
 
 genslip : genslip.o ${OBJS}
-	g77 -o genslip genslip.o ${LDLIBS}
+	${FC} -o genslip genslip.o ${LDLIBS}
 
 ${OBJS} : ${HEADS}
 
