Small updates to GenRand-mpi, and import of utility scripts

--- a/RuptureCodes/GenRand-mpi/Makefile
+++ b/RuptureCodes/GenRand-mpi/Makefile
@@ -12,7 +12,7 @@ CFLAGS = -I${GETPARINCL} -Wall -O3 \
 LIBS = -L${GETPARLIB} -lget -lgfortran -lm
 #LDFLAGS = -static
 
-TARGET = rupgen
+TARGET = rupgen rupgen-serial
 
 all: $(TARGET)
 
@@ -22,6 +22,10 @@ all: $(TARGET)
 
 rupgen: rupgen.o genslip.o func_mpi.o iofunc.o misc.o \
 	ruptime.o slip.o srf_subs.o fourg.o rg_config.o
+	$(CC) -o $@ $^ $(LIBS)
+
+rupgen-serial: rupgen-serial.o genslip.o iofunc.o misc.o \
+	ruptime.o slip.o srf_subs.o fourg.o
 	$(CC) -o $@ $^ $(LIBS)
 
 
