--- a/RuptureCodes/GenRand-mpi/rupgen.conf
+++ b/RuptureCodes/GenRand-mpi/rupgen.conf
@@ -1,6 +1,11 @@
-rupdir=/lustre/scratch/patricks/tmp/rupture_vars_2
-logdir=/lustre/scratch/patricks/tmp/rupture_logs_2
-erfid=35
-rvid=4
-gridftp=gsiftp://gridftp.kraken.nics.teragrid
-pool=kraken
+#rupdir=/lustre/scratch/patricks/tmp/rupture_vars_1
+#logdir=/lustre/scratch/patricks/tmp/rupture_logs_1
+#rupdir=/lustre/scratch/patricks/tmp/rupture_vars_2
+#logdir=/lustre/scratch/patricks/tmp/rupture_logs_2
+rupdir=/lustre/scratch/patricks/tmp/rupture_vars_3
+logdir=/lustre/scratch/patricks/tmp/rupture_logs_3
+erfid=99
+rvid=99
+gridftp=gsiftp://hpc.usc.edu
+pool=hpc
+
