--- a/RuptureCodes/RupGen-api/Makefile
+++ b/RuptureCodes/RupGen-api/Makefile
@@ -6,9 +6,11 @@ GETPARINCL = ${GETPAR}/include
 # General compiler/linker flags
 CC=gcc
 FC=gfortran
+#CC=icc
+#FC=ifort
 CFLAGS = -I${GETPARINCL} -Wall -O3 \
 	-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
-	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS
+	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS -O3
 LIBS = -L${GETPARLIB} -lget -lgfortran -lm
 LDFLAGS = -static
 
@@ -20,11 +22,11 @@ all: $(TARGET)
 # Executables
 ############################################
 
-librupgen.a: rupgen_api.o genslip.o fourg.o slip.o ruptime.o
+librupgen.a: rupgen_api.o genslip.o fourg.o slip.o ruptime.o iofunc.o srf_subs.o misc.o
 	$(AR) rcs $@ $^
 
 
-genslip: genslip.o
+genslip: genslip.o iofunc.o srf_subs.o
 	$(CC) -o $@ $^ $(LIBS)
 
 ############################################
