Modified to support memcached with a compile-time flag

--- a/RuptureCodes/RupGen-api/Makefile
+++ b/RuptureCodes/RupGen-api/Makefile
@@ -2,17 +2,21 @@ GETPAR = ../../Getpar/getpar
 GETPARLIB = ${GETPAR}/lib
 GETPARINCL = ${GETPAR}/include
 
-
 # General compiler/linker flags
 CC=gcc
 FC=gfortran
 #CC=icc
 #FC=ifort
-CFLAGS = -I${GETPARINCL} -Wall -O3 \
+CFLAGS = -I${GETPARINCL} -Wall -g \
 	-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
 	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS -O3
 LIBS = -L${GETPARLIB} -lget -lgfortran -lm
 LDFLAGS = -static
+
+# Uncomment for memcached support
+#MEMC = /home/rcf-104/CyberShake2007/memcached/libmemcached-0.44
+#CFLAGS := $(CFLAGS) -I${MEMC}/include -D_USE_MEMCACHED
+#LIBS = ${LIBS} -L${MEMC}/lib -lmemcached
 
 TARGET = librupgen.a
 
