Added check_for_nans, path to getpar

--- a/SgtTest/src/makefile
+++ b/SgtTest/src/makefile
@@ -1,9 +1,10 @@
+TARGETS = dump_rawsgt check_for_nans
 COBJS = sacio.o iofunc.o fft1d.o
 FOBJS = fourg.o
 
 GETPAR = ../../Getpar/getpar/lib
 
-LIBS = -lm ${GETPAR}/libget.a
+LIBS = -lm ${GETPAR}/libget.a -I../../Getpar/getpar/include
 LDLIBS = ${COBJS} ${FOBJS} ${LIBS}
 
 #LF_FLAGS = -D_FILE_OFFSET_BITS=32
@@ -22,19 +23,24 @@ FC = $(MY_FC)
 
 ##### compile options
 
-CFLAGS = ${UFLAGS} ${LF_FLAGS}
-FFLAGS = ${UFLAGS} -ffixed-line-length-132
+CFLAGS = ${UFLAGS} ${LF_FLAGS} ${LIBS}
+FFLAGS = ${UFLAGS}
 
 ##### make options
 
-all: dump_rawsgt
-	-rm -rf ../bin/dump_rawsgt ; \
-	cp dump_rawsgt ../bin 
+all: $(TARGETS)
+	for TARGET in $(TARGETS); do \
+		rm -rf ../bin/$$TARGET ; \
+		cp $$TARGET ../bin/ ; \
+	done 
 
 dump_rawsgt : dump_rawsgt.c ${COBJS} ${FOBJS}
 	${CC} ${CFLAGS} -o dump_rawsgt dump_rawsgt.c ${LDLIBS}
 
+check_for_nans : check_for_nans.c
+	${CC} ${CFLAGS} -o check_for_nans check_for_nans.c -lm
+
 clean :
 	-rm -f ${COBJS} ${FOBJS}
 
-${COBJS} ${FOBJS} :
+
