Modified to wrap hb_high_v5.4.3, in BBP v15.3.0

--- a/HFSim_mem/src/makefile
+++ b/HFSim_mem/src/makefile
@@ -1,33 +1,30 @@
 HEADS = include.h structure.h function.h defs.h params.h
-SRF2STOCH_OBJS = iofunc.o misc.o srf_subs.o
-HFSIM_OBJS = iofunc.o misc.o srf_subs.o hb_high_v3.2.1.par1.o integ_diff.o wcc_getpeak.o wcc_rotate.o wcc_siteamp09.o fft1d.o
+SRF2STOCH_OBJS = iofunc.o misc.o srf_subs.c
+HFSIM_OBJS = iofunc.o misc.o srf_subs.o hb_high_v5.4.3.o integ_diff.o wcc_getpeak.o wcc_rotate.o wcc_siteamp09.o fft1d.o
 MERGE_OBJS = iofunc.o misc.o wcc_tfilter.o wcc_resamp_arbdt.o wcc_add.o fourg.o
 HF_SYNTH_OBJS = srf2stoch.o ${HFSIM_OBJS} hfsim.o
 
 GETPAR_DIR = ../../Getpar/getpar
-RUPGEN_DIR = /home/rcf-104/CyberShake2007/software-patrices/RuptureCodes/RupGen-api
+RUPGEN_DIR = /projects/sciteam/jmz/CyberShake/software/RuptureCodes/RupGen-api-3.3.1
+MEMCACHED_DIR = /projects/sciteam/jmz/CyberShake/utils/libmemcached_1.0.15
 
 LIBS = -lm ${GETPAR_DIR}/lib/libget.a
-IFLAGS = -I${GETPAR_DIR}/include -I${RUPGEN_DIR}
-LDLIBS = -L${RUPGEN_DIR} -lrupgen ${LIBS}
+IFLAGS = -I${GETPAR_DIR}/include -I${RUPGEN_DIR}/include -I${MEMCACHED_DIR}/include
+LDLIBS = -L${RUPGEN_DIR}/lib -lrupgen -L${MEMCACHED_DIR}/lib -lmemcached ${LIBS} -lstdc++
 
 #LF_FLAGS = -D_FILE_OFFSET_BITS=32
 #
 # use following for large file capability
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 
-UFLAGS = -O3
+UFLAGS = -O3 -g
 
-#FC = g77
-#CC = gcc
-#FC = tau_f90.sh
-#CC = tau_cc.sh
-CC = icc
-FC = ifort
+FC = ftn
+CC = cc
 
 CFLAGS = ${UFLAGS} ${LF_FLAGS} ${IFLAGS}
-#FFLAGS = ${UFLAGS} -ffixed-line-length-132 -finit-local-zero -Wuninitialized
-FFLAGS = ${UFLAGS} -extend-source -nofor-main -zero
+FFLAGS = ${UFLAGS} -ffixed-line-length-132 -finit-local-zero -Wuninitialized
+#FFLAGS = ${UFLAGS} -extend-source -nofor-main -zero
 
 ##### make options
 
@@ -49,8 +46,8 @@ srf2stoch : srf2stoch.c ${SRF2STOCH_OBJS}
 	${CC} ${CFLAGS} -o srf2stoch srf2stoch.c ${SRF2STOCH_OBJS} ${LDLIBS}
 #	cp srf2stoch ../bin/
 
-hb_high_v3.1.1 : hb_high_v3.1.1.f
-	${FC} ${FFLAGS} -o hb_high_v3.1.1 hb_high_v3.1.1.f
+#hb_high_v3.1.1 : hb_high_v3.1.1.f
+#	${FC} ${FFLAGS} -o hb_high_v3.1.1 hb_high_v3.1.1.f
 #	cp hb_high_v3.1.1 ../bin/
 
 clean :
