--- a/UCVM/smoothing/makefile
+++ b/UCVM/smoothing/makefile
@@ -1,7 +1,7 @@
 smooth_mpi : smooth_mpi.c
-	cc -g -o smooth_mpi smooth_mpi.c
+	cc -g -O3 -o smooth_mpi smooth_mpi.c
 
 smooth : smooth.c
-	cc -g -o smooth smooth.c
+	cc -g -O3 -o smooth smooth.c
 
 
