Changed v3.3.1 flags, expanded clean list

--- a/DirectSynth/src/makefile
+++ b/DirectSynth/src/makefile
@@ -12,7 +12,7 @@ TEST_DURATION_OBJS = ${DURATION_OBJS} iofunc.o
 
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 
-BASE_DIR = /projects/sciteam/jmz/CyberShake
+BASE_DIR = /projects/sciteam/bahm/CyberShake
 GETPAR = ../../Getpar/getpar
 LIBCFU = ${BASE_DIR}/utils/libcfu_0.03
 CUR_RG_LIB = -L${BASE_DIR}/software/RuptureCodes/RupGen-api-5.2.3/lib
@@ -22,7 +22,7 @@ CUR_RG_INC = -I${BASE_DIR}/software/RuptureCodes/RupGen-api-5.2.3/include
 V3_3_1_RG_INC = -I${BASE_DIR}/software/RuptureCodes/RupGen-api-3.3.1/include
 IFLAGS = -I${GETPAR}/include -I${BASE_DIR}/utils/libmemcached_1.0.18/include -I${LIBCFU}/include 
 
-UFLAGS = -O3 -g -Wuninitialized -dynamic
+UFLAGS = -O3 -Wuninitialized -dynamic -g
 
 CFLAGS = ${UFLAGS} ${IFLAGS}
 FFLAGS = ${UFLAGS} -ffixed-line-length-132
@@ -30,6 +30,8 @@ FFLAGS = ${UFLAGS} -ffixed-line-length-132
 
 CC = cc
 FC = ftn
+
+direct_synth_v3.3.1 : CFLAGS = ${UFLAGS} ${IFLAGS} -D_V3_3_1
 
 all: $(TARGETS)
 	for TARGET in $(TARGETS); do \
@@ -45,16 +47,17 @@ direct_synth : direct_synth.c jbsim/jbsim3d.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} 
 direct_synth_v3.3.1 : direct_synth.c jbsim/jbsim3d_v3.3.1.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} ${ROTD_OBJS} ${DURATION_OBJS}
 	-rm -f direct_synth_v3.3.1.o
 	${CC} ${CFLAGS} ${V3_3_1_RG_INC} -D_V3_3_1 -c -o direct_synth_v3.3.1.o direct_synth.c
-	${FC} ${FFLAGS} -D_V3_3_1 -o direct_synth_v3_3_1 direct_synth_v3.3.1.o jbsim/jbsim3d_v3.3.1.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} ${ROTD_OBJS} ${DURATION_OBJS} ${V3_3_1_RG_LIB} ${LDLIBS} -lstdc++
+	${FC} ${FFLAGS} -D_V3_3_1 -o direct_synth_v3.3.1 direct_synth_v3.3.1.o jbsim/jbsim3d_v3.3.1.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} ${ROTD_OBJS} ${DURATION_OBJS} ${V3_3_1_RG_LIB} ${LDLIBS} -lstdc++
+	cp direct_synth_v3.3.1 ../bin/
 
 jbsim/jbsim3d.o : jbsim/jbsim3d.c
-	${CC} ${IFLAGS} ${CUR_RG_INC} -c -o jbsim/jbsim3d.o jbsim/jbsim3d.c
+	${CC} ${CFLAGS} ${CUR_RG_INC} -c -o jbsim/jbsim3d.o jbsim/jbsim3d.c
 
 jbsim/jbsim3d_v3.3.1.o : jbsim/jbsim3d.c
-	${CC} ${IFLAGS} ${V3_3_1_RG_INC} -D_V3_3_1 -c -o jbsim/jbsim3d_v3.3.1.o jbsim/jbsim3d.c
+	${CC} ${CFLAGS} ${V3_3_1_RG_INC} -D_V3_3_1 -c -o jbsim/jbsim3d_v3.3.1.o jbsim/jbsim3d.c
 
 test_duration : test_duration.c ${TEST_DURATION_OBJS}
 	${CC} ${CFLAGS} -o test_duration test_duration.c ${TEST_DURATION_OBJS} ${LDLIBS}
 
 clean:
-	-rm -f $(OBJS) $(SYNTH_OBJS) $(PSA_OBJS) $(ROTD_OBJS) $(DURATION_OBJS) $(TARGETS)
+	-rm -f $(OBJS) $(SYNTH_OBJS) $(PSA_OBJS) $(ROTD_OBJS) $(DURATION_OBJS) jbsim/jbsim3d.o jbsim/jbsim3d_v3.3.1.o $(TARGETS) direct_synth.o direct_synth_v3.3.1.o direct_synth_v3.3.1
