--- a/RuptureCodes/RupGen-api-3.3.1/src/Makefile
+++ b/RuptureCodes/RupGen-api-3.3.1/src/Makefile
@@ -1,4 +1,4 @@
-GETPAR = /work/00940/tera3d/CyberShake/software/Getpar/getpar
+GETPAR = ../../../Getpar/getpar
 GETPARLIB = ${GETPAR}/lib
 GETPARINCL = ${GETPAR}/include
 
@@ -7,25 +7,20 @@ GENSLIP = GenRandV3.3.1
 GENSLIP_OBJS = ${GENSLIP}/ruptime.o ${GENSLIP}/iofunc.o ${GENSLIP}/srf_subs.o ${GENSLIP}/misc.o
 
 # General compiler/linker flags
-#CC=gcc
-#FC=gfortran
-CC=icc
-FC=ifort
-CFLAGS = -I${GETPARINCL} -Wall \
+CC=cc
+FC=ftn
+CFLAGS = -I${GETPARINCL} \
 	-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
-	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS -O3 -xhost -g
-#CFLAGS = -I${GETPARINCL} -Wall \
-#       -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
-#       -D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS -O3 -p
+	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS -O3 -g
 LIBS = -L${GETPARLIB} -lget -lgfortran -lm
 LDFLAGS = -static
 
 # Uncomment for memcached support
-MEMC = /work/00940/tera3d/CyberShake/utils/libmemcached
+MEMC = /projects/sciteam/jmz/CyberShake/utils/libmemcached_1.0.18
 CFLAGS := $(CFLAGS) -I${MEMC}/include -D_USE_MEMCACHED
 LIBS := ${LIBS} -L${MEMC}/lib -lmemcached
 
-TARGETS = librupgen.a librupgen_fftw.a
+TARGETS = librupgen.a
 
 all: $(TARGETS)
 
@@ -37,16 +32,8 @@ all: $(TARGETS)
 #librupgen.a: rupgen_api.o ${GENSLIP}/genslip-v3.3.1.o ${GENSLIP}/fourg.o ${GENSLIP}/slip.o ${GENSLIP}/ruptime.o ${GENSLIP}/iofunc.o ${GENSLIP}/srf_subs.o ${GENSLIP}/misc.o
 librupgen.a: rupgen_api.o
 	cd ${GENSLIP} && $(MAKE)
-	$(AR) rcs $@ $^ ${GENSLIP}/genslip-v3.3.1.o ${GENSLIP}/slip.o ${GENSLIP}/fourg.o ${GENSLIP_OBJS}
+	$(AR) rcs $@ $^ ${GENSLIP}/genslip-v3.3.1.o ${GENSLIP}/slip.o ${GENSLIP_OBJS}
 	cp librupgen.a ../lib/
-	cp rupgen_api.h ../include/
-	cp structure.h ../include/
-
-#librupgen_fftw.a: rupgen_api.o ${GENSLIP}/genslip-v3.3.1.fftw.o ${GENSLIP}/slip.o ${GENSLIP}/ruptime.o ${GENSLIP}/iofunc.o ${GENSLIP}/srf_subs.o ${GENSLIP}/misc.o
-librupgen_fftw.a: rupgen_api.o
-	cd ${GENSLIP} && $(MAKE)
-	$(AR) rcs $@ $^ ${GENSLIP}/genslip-v3.3.1.fftw.o ${GENSLIP}/slip.fftw.o ${GENSLIP_OBJS}
-	cp librupgen_fftw.a ../lib/
 	cp rupgen_api.h ../include/
 	cp structure.h ../include/
 
