--- a/PreSgt/src/makefile
+++ b/PreSgt/src/makefile
@@ -1,11 +1,13 @@
 COBJS = gen_sgtgrid.o sacio.o iofunc.o fft1d.o geoproj_subs.o
 FOBJS = fourg.o
 
-GETPAR = ../../Getpar/getpar/lib
+GETPAR = ../../Getpar/getpar
 
-LIBS = -lm ${GETPAR}/libget.a
+LIBS = -lm -L${GETPAR}/lib -lget -L../../../utils/libcfu_0.03/lib -lcfu
 
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
+
+I_FLAGS = -I${GETPAR}/include/libget.h -I../../../utils/libcfu_0.03/include
 
 UFLAGS = -O3
 
@@ -13,11 +15,11 @@ include ../../Compilers.mk
 CC = $(MY_MPICC)
 FC = $(MY_FC)
 
-BIN_LIST = gen_sgtgrid
+BIN_LIST = gen_sgtgrid gen_sgtgrid_qsort
 
 ##### compile options
 
-CFLAGS = $(UFLAGS) $(LF_FLAGS) $(MY_CFLAGS)
+CFLAGS = $(UFLAGS) $(I_FLAGS) $(LF_FLAGS) $(MY_CFLAGS)
 FFLAGS = $(UFLAGS) $(MY_FFLAGS)
 
 all: $(BIN_LIST)
@@ -28,7 +30,10 @@ all: $(BIN_LIST)
 	done
 
 gen_sgtgrid: ${COBJS} ${FOBJS}
-	${CC} -o $@ $^ ${LIBS}
+	${CC} ${CFLAGS} -o $@ $^ ${LIBS}
+
+gen_sgtgrid_qsort: gen_sgtgrid_qsort.o sacio.o iofunc.o fft1d.o geoproj_subs.o
+	${CC} ${CFLAGS} -o $@ $^ ${LIBS}
 
 clean :
 	-rm -f ${COBJS} ${FOBJS} $(BIN_LIST)
