Modifications to support integration with GP 2019 (v5.4.2)

--- a/DirectSynth/src/makefile
+++ b/DirectSynth/src/makefile
@@ -12,26 +12,27 @@ TEST_DURATION_OBJS = ${DURATION_OBJS} iofunc.o
 
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 
-BASE_DIR = /projects/sciteam/bahm/CyberShake
+BASE_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake
 GETPAR = ../../Getpar/getpar
 LIBCFU = ${BASE_DIR}/utils/libcfu_0.03
-CUR_RG_LIB = -L${BASE_DIR}/software/RuptureCodes/RupGen-api-5.2.3/lib
+CUR_RG_LIB = -L${BASE_DIR}/software/RuptureCodes/RupGen-api-5.4.2/lib
 V3_3_1_RG_LIB = -L${BASE_DIR}/software/RuptureCodes/RupGen-api-3.3.1/lib
-LDLIBS = -lrupgen -L${GETPAR}/lib -lget -L${BASE_DIR}/utils/libmemcached_1.0.18/lib -lmemcached -L${LIBCFU}/lib -lcfu -lm 
-CUR_RG_INC = -I${BASE_DIR}/software/RuptureCodes/RupGen-api-5.2.3/include
+LDLIBS = -lrupgen -L${GETPAR}/lib -lget -L${BASE_DIR}/utils/libmemcached_1.0.18/lib -lmemcached -L${LIBCFU}/lib -lcfu -lm -L${OLCF_FFTW_ROOT}/lib -lfftw3f
+CUR_RG_INC = -I${BASE_DIR}/software/RuptureCodes/RupGen-api-5.4.2/include
 V3_3_1_RG_INC = -I${BASE_DIR}/software/RuptureCodes/RupGen-api-3.3.1/include
 IFLAGS = -I${GETPAR}/include -I${BASE_DIR}/utils/libmemcached_1.0.18/include -I${LIBCFU}/include 
 
-UFLAGS = -O3 -Wuninitialized -dynamic -g
+#UFLAGS = -O3 -Wuninitialized -dynamic -g
+UFLAGS = -O3 -g 
 
 CFLAGS = ${UFLAGS} ${IFLAGS}
 FFLAGS = ${UFLAGS} -ffixed-line-length-132
-#FFLAGS = ${UFLAGS}
+#FFLAGS = ${UFLAGS} -qfixed=132
 
-CC = cc
-FC = ftn
+CC = mpicc
+FC = mpif77
 
-direct_synth_v3.3.1 : CFLAGS = ${UFLAGS} ${IFLAGS} -D_V3_3_1
+direct_synth_v3.3.1 : CFLAGS = ${UFLAGS} ${IFLAGS} -fno-expensive-optimizations -D_V3_3_1
 
 all: $(TARGETS)
 	for TARGET in $(TARGETS); do \
@@ -43,6 +44,7 @@ direct_synth : direct_synth.c jbsim/jbsim3d.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} 
 	-rm -f direct_synth.o
 	${CC} ${CFLAGS} ${CUR_RG_INC} -c -o direct_synth.o direct_synth.c
 	${FC} ${FFLAGS} -o direct_synth direct_synth.o jbsim/jbsim3d.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} ${ROTD_OBJS} ${DURATION_OBJS} ${CUR_RG_LIB} ${LDLIBS} -lstdc++
+	cp direct_synth ../bin/
 
 direct_synth_v3.3.1 : direct_synth.c jbsim/jbsim3d_v3.3.1.o ${OBJS} ${SYNTH_OBJS} ${PSA_OBJS} ${ROTD_OBJS} ${DURATION_OBJS}
 	-rm -f direct_synth_v3.3.1.o
